--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,9 +1,109 @@
-html {
-  box-sizing: border-box;
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
+  transition: color 150ms var(--timing-function), background-color 150ms var(--timing-function);
+}
+
+.search-form {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.input {
+  border: 3px solid #bdbdbd;
+  border-radius: 4px;
+  padding: 6px 20px 6px 10px;
+  margin-right: 15px;
+  font-size: 18px;
+}
+
+.gallery {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  max-width: calc(100% - 64px);
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 24px;
+}
+
+.card-image {
+  height: 200px;
+  object-fit: cover;
+  max-width: 100%;
+}
+
+.stats {
+  padding-top: 10px;
+  padding-left: 15px;
+}
+
+.stats-item {
+  display: flex;
+  align-items: center;
+  color: rgb(78, 77, 77);
+  font-size: 12px;
+}
+
+.material-icons {
+  margin-right: 8px;
+}
+
+.btn {
+  color: #fff;
+  background-color: #2196f3;
+  border: 0;
+  outline: 0;
+  padding: 9px 24px;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.05);
+  font: inherit;
+  font-weight: 500;
+  font-size: 17px;
+  user-select: none;
+  transition: background-color 250ms var(--timing-function);
+}
+
+.btn:hover {
+  box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.15);
+  background-color: #1976d2;
+}
+
+.load-more-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+
+.spinner-border {
+  margin-left: 5px;
+}
+
+.lightbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 8 0%;
 }
